@@ -25,6 +25,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note3
 
+26-Apr-2013 Mark Dexter
+ # [#30702] Only titles display in featured/blogged views when hide intro text is selected.
+
 -------------------- 3.1.0 Stable Release [24-Apr-2013] ------------------
 
 23-Apr-2013 Mark Dexter
